--- a/index.html
+++ b/index.html
@@ -1,97 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario Projeto_git</title>
+    <title>Blog da Kenzie</title>
+    <meta name="description" content="Blog feito por aluno para divulgar topicos da Kenzie">
+    <link rel="icon" href="/img/favicon.jpeg" />
 </head>
 
 <body>
     <div>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="">Pagina Inicial</a></li>
-                    <li><a href="">Cadastro</a></li>
-                    <li><a href="">Sobre nos</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Politicas de Privacidade</a></li>
+        <Header>
+            <h1>Blog da Kenzie</h1>
+        </Header>
 
-                </ul>
-            </nav>
-        </header>
+
     </div>
     <div>
-        <Main>
+        <section>
             <article>
-                <h1>Como aprender ingles de forma facil e rapida</h1>
-                <p>Voce pode aprender ingles <strong>hoje mesmo!</strong></p>
+                <h4>LÓGICA DE PROGRAMAÇÃO:O QUE É E POR QUE É IMPORTANTE?</h4>
+                <p>Tudo o que fazemos segue uma sequência lógica.</p>
+                <p>Na grande maioria das vezes, não nos damos conta disso, mas ao fazer uma análise do nosso cotidiano, podemos compreender como todas as nossas ações são consequência de uma cadeia de outras ações menores que nos levaram até uma atitude final.</p>
+                <p>Quer ver?</p>
+                <p>Vamos tomar como exemplo o café que tomamos de manhã.</p>
+                <p>Quando perguntam como tomamos nosso café, a maioria de nós responde que, ao acordarmos, preparamos o café com auxílio de uma cafeteira elétrica, colocamos ele em uma caneca e o tomamos.</p>
+                <p>Mas, ao destrinchar este processo, somos capazes de estipular uma sequência de passos que nos levaram ao ato final de beber este café...</p>
             </article>
-
-            <Section>
-                <h1></h1>
-            </Section>
-        </Main>
+        </section>
     </div>
     <div>
         <footer>
-            <ul>
-                <li><a href="https://www.instagram.com/specternoir12/" target="_blank">Contato por instagram</a></li>
-                <li><a href="https://www.linkedin.com/in/daniel-lemos-de-brito-781413229/" target="_blank">Contato por
-                        linkedin</a></li>
-            </ul>
+        <p>Escrito por:Ugo Roveda</p>
+        <a href="https://kenzie.com.br/blog/logica-de-programacao/" target="_blank">Segue link para materia completa</a>
+    
+    </footer>
+    </div>
+
+    <div>
+        <section>
+            <article>
+                <h4>COMO APRENDER A PROGRAMAR DO ZERO: PASSO A PASSO</h4>
+                <p>Quer entrar em um mercado de trabalho que não para de crescer, mas não sabe por onde começar? Pela programação. A programação é uma das áreas que demandará quase 800 mil profissionais até 2025.  Acompanhe esse passo a passo até o final para <strong>aprender como programar do zero</strong> Boa leitura!</p>
+                <p><strong>O que é programação?</strong></p>
+                <p>Programação é o processo de desenvolvimento que usa de linguagem específica para atribuir ações que serão entendidas e interpretadas por máquinas. Em outras palavras, programação é o conjunto de instruções presentes na linguagem de programação. Sendo didático, programação é a língua que as máquinas entendem e obedecem.</p>
+                <p><strong>Por que aprender programação é importante? </strong></p>
+                <p>Se engana quem acha que programação é só a linguagem.<strong>Para programar é necessário ter raciocínio lógico</strong>, isso porque é necessário resolver problemas de todos os tipos. Além disso, para programar é necessário desenvolver pensamento estruturado. O pensamento estruturado, por sua vez, pode auxiliar em outras inúmeras áreas do conhecimento como comunicação, por exemplo.</p>
+                <p></p>                    
+            </article>
+        </section>
+    </div>
+    <div>
+        <footer>
+            <p>Escrito por:Daniel Kriger</p>
+            <a href="https://kenzie.com.br/blog/como-aprender-a-programar-2/" target="_blank">Segue link para materia completa</a>
         </footer>
     </div>
-    <form action="">
-        <label for="nick">Seu Nickname</label>
-        <input type="text" placeholder="digite seu nome de usuario" maxlength="8" name="nick" id="nick" requi
-            red="true">
-
-        <Label for="email">Seu email</Label>
-        <input type="email" name="email" id="email" placeholder="Digite seu email" required="true">
-
-        <label for="senha">Digite sua senha</label>
-        <input type="password" placeholder="Digite sua senha" name="senha" id="senha" required="true" maxlength="10">
-
-        <p>Qual melhor metodo de contato?</p>
-
-        <label for="correio">Correio</label>
-        <input type="radio" name="MetodoDeContato" id="correio" value="correio">
-
-        <label for="email">Email</label>
-        <input type="radio" name="MetodoDeContato" id="email" value="email">
-
-        <label for="whatsapp">Whatsapp</label>
-        <input type="radio" name="MetodoDeContato" id="whatsapp" value="whatsapp">
-
-        <label for="Plano">Selecione seu plano</label>
-        <select name="Plano" id="Plano" required="true">
-            <option value="">Escolher Plano</option>
-            <option value="gratis">Gratis</option>
-            <option value="premium">Premium</option>
-            <option value="ultra">Ultra</option>
-        </select>
-
-        <label for="conte mais">Conte um pouco mais sobre você</label>
-        <textarea name="conte mais" id="conte mais" cols="30" rows="10" placeholder="Conte mais sobre você">
-
-        </textarea>
-        <button type="submit">enviar</button>
-
-
-    </form>
-    <Div>
+    <div>
+        <section>
+            <article>
+                <h4>QUAL A LINGUAGEM DE PROGRAMAÇÃO UTILIZADA EM ARDUINO</h4>
+                <p>Quase duas décadas depois do surgimento, o Arduino é uma realidade quando os assuntos são desenvolver protótipos, investir menos dinheiro para fazer testes e ganhar uma imensidão de possibilidades por conta da versatilidade da placa.</p>
+                <p>Popularizado por ter software e hardware livres, o Arduino ganhou espaço nas mesas de testes e nas telas de computador onde são programadas, tornando-se um grande aliado da educação. Some isso à adesão da comunidade de tecnologia ao produto e o que se tem é uma solução em constante evolução e barateamento.</p>
+                <p>O Arduino é uma plataforma versátil que aceita gravações desde pequenos códigos, como acender uma lâmpada de LED, porém, pode ser usada em operações mais complexas como reconhecer gases através de sensores. </p>    
+                <p>A junção do baixo custo e da versatilidade fizeram com que o Arduino ganhasse relevância em alguns setores de produção, em especial, na tecnologia.</p>
+                <p>E algumas dúvidas surgiram. Neste texto vamos explicar uma dúvida comum: Qual a linguagem de programação utilizada em Arduino? Boa leitura!</p>
+            </article>
+        </section>
+    </div>
+    <div>
+        <footer>
+            <p>Escrito por:Daniel Kriger</p>
+            <a href="https://kenzie.com.br/blog/programacao-para-arduino/"target="_blank">Segue link para materia completa</a>    
+        </footer>
+    </div>
+    <div>
         <Section>
-            <Article>
-                <h1>Voce está a um passo de aprender <strong>inglês!</strong></h1>
-                <p>Siga as instruções enviadas para <a href="https://mail.google.com/mail/u/0/#inbox"
-                        target="_blank">seu email, e
-                        conclua o cadastro</a></p>
-            </Article>
+            <h4>Deseja receber nossas noticias em primeira mão?</h4>
+            <p>Basta inserir o seu e-mail de preferencia</p>
+            <form>
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" required="true" placeholder="Digite seu email aqui"> 
+            <button>Receba newsletter</button>
+            </form>    
         </Section>
-    </Div>
+    </div>
 </body>
-
 </html>
